修复PC端滚动卡片bug

--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
 				</p>
 				<div class="itemList">
 					<ul id="myTab" class="nav nav-tabs">
-						<li class="active"><a href="#chinese" data-toggle="tab" class="haveLevel" data-type="chinese">语文</a></li>
-						<li style="width: 17%;"><a href="#math" data-toggle="tab" class="haveLevel" data-type="math">数学</a></li>
-						<li style="width: 15%;"><a href="#english" data-toggle="tab" class="haveLevel" data-type="english">英语</a></li>
+						<li class="active" style="width: 13%;"><a href="#chinese" data-toggle="tab" class="haveLevel" data-type="chinese">语文</a></li>
+						<li style="width: 16%;"><a href="#math" data-toggle="tab" class="haveLevel" data-type="math">数学</a></li>
+						<li style="width: 14%;"><a href="#english" data-toggle="tab" class="haveLevel" data-type="english">英语</a></li>
 						<li style="width: 20%;"><a href="#interest" data-toggle="tab" class="nohaveLevel" data-type="interest">趣味课程</a></li>
 					</ul>
 					<ul class="smallitem">
-						<li class="itemactive" onclick="data(this,'一年级','level1')">一年级</li>
+						<li onclick="data(this,'一年级','level1')">一年级</li>
 						<li onclick="data(this,'二年级','level2')">二年级</li>
-						<li onclick="data(this,'三年级','level3')">三年级</li>
+						<li class="itemactive" onclick="data(this,'三年级','level3')">三年级</li>
 						<li onclick="data(this,'四年级','level4')">四年级</li>
 						<li onclick="data(this,'五年级','level5')">五年级</li>
 						<li onclick="data(this,'六年级','level6')">六年级</li>
@@ -535,7 +535,7 @@
 						<li style="flex: 1;"><a href="#englishs" data-toggle="tab" class="hasLevel" data-type="english">英语</a></li>
 						<li style="flex: 1.2;"><a href="#interests" data-toggle="tab" class="noLevel" data-type="interest">趣味课程</a></li>
 					</ul>
-					<div class="choosewhich"><span class="chooselevel">一年级</span><span class="chooseicon">+</span></div>
+					<div class="choosewhich"><span class="chooselevel">三年级</span><span class="chooseicon">+</span></div>
 					<ul class="smallitem">
 						<li onclick="setdata('一年级','level1')" data-level='一年级'>一年级</li>
 						<li onclick="setdata('二年级','level2')" data-level='二年级'>二年级</li>
@@ -845,7 +845,7 @@
 				</div>
 			</footer>
 		</div>
-		<div id="fadebg" style="display: none;"><div id="videoContent"><div id="fadebgclose">X</div></div></div>
+		<div id="fadebg" style="display: none;"><div id="videoContent"><div id="fadebgclose">×</div></div></div>
 
 
 
